fix - user details on small and large screens

--- a/capstone/static/css/scss/_nav.scss
+++ b/capstone/static/css/scss/_nav.scss
@@ -80,8 +80,10 @@ nav {
   nav {
     @include media-breakpoint-up(lg) {
       border-bottom: 0.5px solid $color-white;
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none;
     }
-
   }
 }
 
